--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+/* @import '~bootstrap/scss/bootstrap'; */
 
 body,
 input {
@@ -12,6 +13,10 @@ input {
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.content {
+  padding-top: 94px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -41,5 +46,11 @@ input {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  .content {
+    padding-top: 85px;
   }
 }
