--- a/client/src/css/GoodsCardCss.css
+++ b/client/src/css/GoodsCardCss.css
@@ -10,6 +10,7 @@
   color: #333;
   text-align: left;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  border-radius: 10px ;
 }
 .GoodsCard * {
   -webkit-box-sizing: border-box;
