--- a/client/src/css/StatsCss.css
+++ b/client/src/css/StatsCss.css
@@ -1,6 +1,6 @@
 .Stats{
     display: flex;
-    margin: 15px 10px;
+    margin-bottom: 50px;
     flex-wrap: wrap;
     justify-content: center ;
 }
