--- a/client/src/css/navBar.css
+++ b/client/src/css/navBar.css
@@ -188,11 +188,70 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400px;
-  height: 400px;
-  background-color: #5a5959a6;
+  width: 100%;
+  max-width: 1100px;
+  min-height: 200px;
+  background-color: white;
   border: 2px solid #000;
-  box-shadow: 0 0 24px rgba(0, 0, 0, 0.5); /* Adjust the box shadow as needed */
+  box-shadow: 0 0 24px rgba(0, 0, 0, 0.5);
   padding: 4px;
 }
 
+.logos_ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding: 10px;
+  margin: 0;
+}
+
+.box li {
+  padding: 0 10px;
+}
+
+.box img {
+  box-shadow: none;
+  width: 65px;
+  height: 65px;
+  display: block;
+  margin: 0 auto;
+}
+
+.box span,
+.city_name {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.box p {
+  text-align: center;
+  font-size: 16px;
+  text-transform: none;
+  color: rgb(51, 51, 51);
+  cursor: default;
+}
+
+.view_all{
+  padding: 15px 0;
+  color: #d11c1c;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.city_list_ul {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 5px;
+  list-style: none;
+  padding: 0;
+}
+
+.city_list_ul li {
+  box-sizing: border-box;
+  text-align: center;
+}
