--- a/client/src/css/CategoryCardCss.css
+++ b/client/src/css/CategoryCardCss.css
@@ -1,6 +1,7 @@
 
 .CategoryCard {
     position: relative;
+    cursor: pointer;
     overflow: hidden;
     margin: 10px;
     min-width: 280px;
@@ -31,7 +32,7 @@
     padding: 5px 20px;
     line-height: 40px;
     font-weight: 800;
-    border-radius: 10px;
+    border-radius: 25px;
     width: 120px;
     text-align: center;
   }
