--- a/client/src/css/CategoryCardCss.css
+++ b/client/src/css/CategoryCardCss.css
@@ -30,11 +30,12 @@
     color: black;
     background-color: white;
     padding: 5px 20px;
-    line-height: 40px;
-    font-weight: 800;
+    line-height: 20px;
+    font-weight: 500;
     border-radius: 25px;
-    width: 120px;
+    width: 140px;
     text-align: center;
+    padding: 10px;
   }
 
   .CategoryCard:hover img,
