--- a/client/src/css/CategoryCardCss.css
+++ b/client/src/css/CategoryCardCss.css
@@ -3,8 +3,9 @@
     position: relative;
     cursor: pointer;
     overflow: hidden;
+    /* height:  300px; */
     margin: 10px;
-    min-width: 280px;
+    min-width: 200px;
     max-width: 310px;
     width: 100%;
     background: var(--main-color) ;
@@ -26,7 +27,7 @@
   .category-name {
     position: absolute;
     top: 75%;
-    left: 28%;
+    left: 15%;
     color: black;
     background-color: white;
     padding: 5px 20px;
