--- a/client/src/css/carousel.css
+++ b/client/src/css/carousel.css
@@ -1,9 +1,10 @@
-img {
-  width: 100%;
+.carousel-img {
+  width: 97%;
   max-height: 100vh;
   object-fit: cover;
   object-position: center;
-  border-radius: 10px;
+  border-radius: 40px;
+  margin: 0px 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   transition: all 0.3s ease-in-out;
 }
