--- a/client/src/css/navBar.css
+++ b/client/src/css/navBar.css
@@ -20,6 +20,9 @@ a {
   text-decoration: none;
   /* user-select: none; */
 }
+.selectACity{
+  margin-bottom: 0px;
+}
 
 @media only screen and (max-width: 760px) {
   .navbar-links .nav_logos {
@@ -105,8 +108,9 @@ a {
     background-color: rgba(240, 240, 240, 0.9);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.01);
     justify-content: space-between;
-    padding: 20px 25px;
-    padding-top: 28px;
+    padding: 15px 20px;
+    padding-top: 15px;
+    padding-bottom: 0px;
     height: max-content;
     position: fixed;
     z-index: 1000;
