--- a/client/src/css/CategoryCardCss.css
+++ b/client/src/css/CategoryCardCss.css
@@ -26,8 +26,11 @@
   }
   .category-name {
     position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
     top: 75%;
-    left: 15%;
     color: black;
     background-color: white;
     padding: 5px 20px;
