--- a/client/src/css/carousel.css
+++ b/client/src/css/carousel.css
@@ -1,7 +1,7 @@
 .carousel-img {
   width: 97%;
   max-height: 100vh;
-  object-fit: cover;
+  object-fit: unset;
   object-position: center;
   border-radius: 40px;
   margin: 0px 20px;
