--- a/client/src/css/carousel.css
+++ b/client/src/css/carousel.css
@@ -4,7 +4,10 @@
   object-fit: unset;
   object-position: center;
   border-radius: 40px;
-  margin: 0px 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   transition: all 0.3s ease-in-out;
+}
+
+.carousel-img-div{
+  text-align: center;
 }
