--- a/client/src/css/GoodsCardCss.css
+++ b/client/src/css/GoodsCardCss.css
@@ -19,7 +19,7 @@
   transition: all 0.30s cubic-bezier(0.25, 0.5, 0.5, 0.9);
 }
 .GoodsCard img {
-  height: 45%;
+  height: 230px;
   width: 100%;
   max-width: 100%;
   vertical-align: top;
