--- a/client/src/css/404Css.css
+++ b/client/src/css/404Css.css
@@ -16,7 +16,8 @@
   background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
   height: 400px;
   background-position: center;
-  width: 100%;
+  width: 85%;
+  margin: auto;
 }
 
 .four_zero_four_bg h1 {
