some more changes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,7 @@ input {
   --main-color: #007bff;
   --secondary-color: #E00751;
   --button-color: gray;
+  --success-color: #0fce0f;
   --light-color: #f4f4f4;
 }
 
