--- a/client/src/css/CartCss.css
+++ b/client/src/css/CartCss.css
@@ -104,7 +104,8 @@
 	margin-right: 15px;
 }
 .right-bar a:hover {
-	background-color: green;
+	cursor: pointer;
+	background-color: rgb(3, 170, 3);
 }
 @media screen and (max-width: 700px) {
 	.cart-content h3 {
