added loading in product page

--- a/client/src/css/ProductsCss.css
+++ b/client/src/css/ProductsCss.css
@@ -59,6 +59,9 @@
     justify-content: center;
 }
 
+.backdrop{
+    color: var(--secondary-color);
+}
 
 /* Add media query for responsiveness */
 @media (max-width: 768px) {
