--- a/client/src/css/ProductsCss.css
+++ b/client/src/css/ProductsCss.css
@@ -18,6 +18,10 @@
     text-align: center;
 }
 
+.filter-body{
+    width: 100%;
+}
+
 .products-filter{
     width:100%;
     display: flex;
@@ -49,14 +53,25 @@
 }
 
 .filter-category {
-    margin-top: 1rem;
-    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .filter-category-body{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    width: 100%;
+    flex: 1;
+}
+.filters-sort{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.filter-body{
+    padding-left: 12%;
 }
 
 
