--- a/client/src/css/navBar.css
+++ b/client/src/css/navBar.css
@@ -12,7 +12,13 @@
   color: #272727;
 }
 .city-select{
+  border: 2px solid black !important ;
+  margin-bottom: 5px;
+  margin-left: 10px;
   cursor: pointer;
+  margin-bottom: 0px;
+}
+.location_conatiner h3{
   margin-bottom: 0px;
 }
 
@@ -292,4 +298,8 @@ a {
 
 .icon-nav{
   margin-left: 10px;
+}
+
+.box-title{
+  color: var(--secondary-color);
 }
