--- a/client/src/css/ProductsCss.css
+++ b/client/src/css/ProductsCss.css
@@ -40,7 +40,11 @@
 
 /* Style for selected category */
 .selected-category {
-    background-color: #1ee00b;
+    background-color: gray;
+    color: #fff;
+}
+.selected-category:hover {
+    background-color: black;
     color: #fff;
 }
 
